tests/paczka1/fuzzy1/74227222.err
Error in line 2: tPw A124 11,8
Error in line 12: bx1vb2 S538 39,6
Error in line 14: mz9 A124 219,7
Error in line 16: mz9 A922 2,2
Error in line 23: rppZfmE A124 55,1
Error in line 31: OM0Fgd S538 20,4
